ingress/examplesingleingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/upstream-vhost: "foo.bar.com:8081"
spec:
  rules:
  - host: foo.bar.com
    http:  
      paths:  
        - backend:  
            service:  
              name: exampleservicenginx 
              port:  
                number: 8081
          path: /  
          pathType: Prefix
